[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Sprites/Tilemap/Spritesheet/tiles_packed.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Terrain/JumpSpring.gd" type="Script" id=2]
[ext_resource path="res://Assets/SFX/Sounds/jump_spring.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9, 4.5 )

[sub_resource type="Animation" id=2]
resource_name = "bounce"
length = 0.2
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.02, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 107, 108, 107 ]
}

[node name="JumpSpring" type="Area2D" groups=[
"TerrainItem",
]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 20
vframes = 9
frame = 107

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3.5 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/bounce = SubResource( 2 )

[node name="BounceSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_JumpSpring_body_entered"]
